examples/smtp4dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: smtp
      port: 25
      targetPort: 25
